Remove or rewrite tests to make way for removal of lucene+native